--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,35 @@
-# Prerequisites
-*.d
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# Production
+dist/
+build/
+.next/
+out/
 
-# Linker output
-*.ilk
-*.map
-*.exp
+# Environment variables
+.env
+.env*.local
 
-# Precompiled Headers
-*.gch
-*.pch
+# Database
+*.db
+*.sqlite
+prisma/migrations/
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+# Logs
+*.log
+logs/
+pnpm-debug.log*
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+# IDE
+.vscode/
+.idea/
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+# OS
+.DS_Store
+Thumbs.db
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
-
-# debug information files
-*.dwo
+# Turbo
+.turbo/
